HelloUltraviolet/Fixtures/RejectedSource/Expressions/ExprUnresolved/Source/Main.uv
//! Rejected expression specimen for an unresolved qualified name.

public procedure exprUnresolvedReference() -> i32 {
    return MissingModule::missingValue
}
